# gaimplan

./: .env.example  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json
docs/: AI_SETUP.md  CONTRIBUTING.md  DATA_STORAGE.md  DEPLOYMENT.md  MCP_FUNCTION_CALLING.md  MCP_INTEGRATION.md  MCP_SETTINGS_EXAMPLE.md  QUICK_START_GUIDE.md  USER-GUIDE.md
mcp-servers/filesystem-server/: index.js  package-lock.json  package.json
mcp-servers/git-server/: index.js  package-lock.json  package.json
mcp-servers/neo4j/: .env.example  README.md  config.js  index.js  package-lock.json  package.json
mcp-servers/qdrant-server/: .env.example  README.md  granite-compatibility-report.md  jest.config.cjs  nomic-model-test-report.md  package-lock.json  package.json  tsconfig.json
mcp-servers/search-server/: index.js  package-lock.json  package.json
scripts/: clear_qdrant_collections.py  setup-shared-docker.sh  setup-vault-docker.sh
src/: PaneManager.js  TabManager.js  main.js  style.css  test-mcp-settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.gaimplan/: editor_preferences.json
src-tauri/capabilities/: main.json
src-tauri/src/: ai_settings_multi.rs  ai_stream.rs  app_state.rs  editor.rs  lib.rs  main.rs  pdf_export.rs  vault_settings.rs  window_commands.rs  window_commands_basic.rs  window_factory.rs  window_lifecycle.rs  window_state.rs
src-tauri/src/commands/: graph.rs  mod.rs  search.rs
src-tauri/src/graph/: embeddings.rs  manager.rs  mod.rs  neo4j.rs  shared_config.rs  sync.rs
src-tauri/src/mcp/: commands.rs  mod.rs  process.rs  transport.rs
src-tauri/src/search/: hybrid.rs  mod.rs
(+34 files in other folders)
