[package]
name = "gaimplan-dev"
version = "0.1.0"
description = "Open-source, local-first knowledge management application"
authors = ["gaimplan Contributors"]
edition = "2021"
default-run = "gaimplan"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
base64 = "0.21"
headless_chrome = "1.0"
pulldown-cmark = "0.9"
ammonia = "3"
urlencoding = "2"
futures-util = "0.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
anyhow = "1.0"
dotenvy = "0.15"
thiserror = "1.0"
url = "2.5"
libc = "0.2"
lazy_static = "1.4"
# Neo4j driver
neo4rs = "0.7"
# Qdrant client
qdrant-client = "1.15"
# For async traits
async-trait = "0.1"
# For home directory
dirs = "5.0"
# For UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "gaimplan_dev"
path = "src/lib.rs"

[[bin]]
name = "gaimplan"
path = "src/main.rs"

[[bin]]
name = "test_sync"
path = "src/bin/test_sync.rs"
